Fri Dec 19 11:36:53 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/blk.c: fix memory problem
	* src/ctlib/ct.c: small optimization

Wed Dec 17 12:10:29 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: optimize

Wed Dec 17 12:01:55 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ct.c src/dblib/dblib.c src/odbc/odbc.c src/pool/member.c:
	* src/tds/login.c src/tds/unittests/common.c:
	- check tds_connect_and_login result correctly

Tue Dec 16 16:39:35 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ct.c src/dblib/dblib.c src/tds/bulk.c:
	- add and reuse tds_writetext_(start|continue|end)

Tue Dec 16 10:25:33 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/blk.c src/dblib/bcp.c src/tds/bulk.c:
	- add and reuse tds_bcp_init
	- small bulk.c improves

Tue Dec 16 10:19:26 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/util.c src/apps/tsql.c:
	- remove formatting problems

Mon Dec 15 16:48:44 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/blk.c src/dblib/bcp.c src/tds/bulk.c:
	- add and reuse tds_bcp_done, tds_bcp_start and tds_bcp_start_copy_in

Mon Dec 15 14:18:38 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/blk.c src/dblib/bcp.c src/tds/bulk.c:
	- add and reuse tds_bcp_send_colmetadata
	- fix some tdsdump_log in bulk.c

Mon Dec 15 13:33:10 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/blk.c src/dblib/bcp.c src/tds/bulk.c:
	- add and reuse tds_bcp_send_record

Mon Dec 15 00:15:18 EST 2008	JK Lowden <jklowden@freetds.org>
	* include/tds.h src/apps/tsql.c
	* src/ctlib/ct.c src/dblib/dblib.c
	* src/odbc/odbc.c src/pool/member.c
	* src/server/query.c src/tds/config.c
	* src/tds/log.c src/tds/login.c
	* src/tds/net.c src/tds/util.c
	* src/tds/unittests/common.c
	- Remove TDSSOCKET::last_packet, added tds_lastpacket(). 